--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type='number'] {
+/* input[type='number'] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
@@ -15,4 +15,317 @@ input[type='number']::-webkit-inner-spin-button {
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+} */
+
+.light-high-contrast {
+  --md-sys-color-primary: rgb(0 36 62);
+  --md-sys-color-surface-tint: rgb(49 98 141);
+  --md-sys-color-on-primary: rgb(255 255 255);
+  --md-sys-color-primary-container: rgb(10 70 111);
+  --md-sys-color-on-primary-container: rgb(255 255 255);
+  --md-sys-color-secondary: rgb(21 35 49);
+  --md-sys-color-on-secondary: rgb(255 255 255);
+  --md-sys-color-secondary-container: rgb(54 68 83);
+  --md-sys-color-on-secondary-container: rgb(255 255 255);
+  --md-sys-color-tertiary: rgb(42 28 58);
+  --md-sys-color-on-tertiary: rgb(255 255 255);
+  --md-sys-color-tertiary-container: rgb(76 60 92);
+  --md-sys-color-on-tertiary-container: rgb(255 255 255);
+  --md-sys-color-error: rgb(78 0 2);
+  --md-sys-color-on-error: rgb(255 255 255);
+  --md-sys-color-error-container: rgb(140 0 9);
+  --md-sys-color-on-error-container: rgb(255 255 255);
+  --md-sys-color-background: rgb(247 249 255);
+  --md-sys-color-on-background: rgb(24 28 32);
+  --md-sys-color-surface: rgb(247 249 255);
+  --md-sys-color-on-surface: rgb(0 0 0);
+  --md-sys-color-surface-variant: rgb(222 227 235);
+  --md-sys-color-on-surface-variant: rgb(31 36 42);
+  --md-sys-color-outline: rgb(62 67 74);
+  --md-sys-color-outline-variant: rgb(62 67 74);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(45 49 53);
+  --md-sys-color-inverse-on-surface: rgb(255 255 255);
+  --md-sys-color-inverse-primary: rgb(224 237 255);
+  --md-sys-color-primary-fixed: rgb(10 70 111);
+  --md-sys-color-on-primary-fixed: rgb(255 255 255);
+  --md-sys-color-primary-fixed-dim: rgb(0 47 78);
+  --md-sys-color-on-primary-fixed-variant: rgb(255 255 255);
+  --md-sys-color-secondary-fixed: rgb(54 68 83);
+  --md-sys-color-on-secondary-fixed: rgb(255 255 255);
+  --md-sys-color-secondary-fixed-dim: rgb(32 46 60);
+  --md-sys-color-on-secondary-fixed-variant: rgb(255 255 255);
+  --md-sys-color-tertiary-fixed: rgb(76 60 92);
+  --md-sys-color-on-tertiary-fixed: rgb(255 255 255);
+  --md-sys-color-tertiary-fixed-dim: rgb(53 38 69);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(255 255 255);
+  --md-sys-color-surface-dim: rgb(216 218 224);
+  --md-sys-color-surface-bright: rgb(247 249 255);
+  --md-sys-color-surface-container-lowest: rgb(255 255 255);
+  --md-sys-color-surface-container-low: rgb(242 243 249);
+  --md-sys-color-surface-container: rgb(236 238 244);
+  --md-sys-color-surface-container-high: rgb(230 232 238);
+  --md-sys-color-surface-container-highest: rgb(224 226 232);
 }
+
+.light-medium-contrast {
+  --md-sys-color-primary: rgb(10 70 111);
+  --md-sys-color-surface-tint: rgb(49 98 141);
+  --md-sys-color-on-primary: rgb(255 255 255);
+  --md-sys-color-primary-container: rgb(73 120 164);
+  --md-sys-color-on-primary-container: rgb(255 255 255);
+  --md-sys-color-secondary: rgb(54 68 83);
+  --md-sys-color-on-secondary: rgb(255 255 255);
+  --md-sys-color-secondary-container: rgb(104 118 134);
+  --md-sys-color-on-secondary-container: rgb(255 255 255);
+  --md-sys-color-tertiary: rgb(76 60 92);
+  --md-sys-color-on-tertiary: rgb(255 255 255);
+  --md-sys-color-tertiary-container: rgb(128 109 145);
+  --md-sys-color-on-tertiary-container: rgb(255 255 255);
+  --md-sys-color-error: rgb(140 0 9);
+  --md-sys-color-on-error: rgb(255 255 255);
+  --md-sys-color-error-container: rgb(218 52 46);
+  --md-sys-color-on-error-container: rgb(255 255 255);
+  --md-sys-color-background: rgb(247 249 255);
+  --md-sys-color-on-background: rgb(24 28 32);
+  --md-sys-color-surface: rgb(247 249 255);
+  --md-sys-color-on-surface: rgb(24 28 32);
+  --md-sys-color-surface-variant: rgb(222 227 235);
+  --md-sys-color-on-surface-variant: rgb(62 67 74);
+  --md-sys-color-outline: rgb(90 95 102);
+  --md-sys-color-outline-variant: rgb(118 123 130);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(45 49 53);
+  --md-sys-color-inverse-on-surface: rgb(239 241 246);
+  --md-sys-color-inverse-primary: rgb(156 203 251);
+  --md-sys-color-primary-fixed: rgb(73 120 164);
+  --md-sys-color-on-primary-fixed: rgb(255 255 255);
+  --md-sys-color-primary-fixed-dim: rgb(46 95 138);
+  --md-sys-color-on-primary-fixed-variant: rgb(255 255 255);
+  --md-sys-color-secondary-fixed: rgb(104 118 134);
+  --md-sys-color-on-secondary-fixed: rgb(255 255 255);
+  --md-sys-color-secondary-fixed-dim: rgb(79 93 109);
+  --md-sys-color-on-secondary-fixed-variant: rgb(255 255 255);
+  --md-sys-color-tertiary-fixed: rgb(128 109 145);
+  --md-sys-color-on-tertiary-fixed: rgb(255 255 255);
+  --md-sys-color-tertiary-fixed-dim: rgb(102 85 119);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(255 255 255);
+  --md-sys-color-surface-dim: rgb(216 218 224);
+  --md-sys-color-surface-bright: rgb(247 249 255);
+  --md-sys-color-surface-container-lowest: rgb(255 255 255);
+  --md-sys-color-surface-container-low: rgb(242 243 249);
+  --md-sys-color-surface-container: rgb(236 238 244);
+  --md-sys-color-surface-container-high: rgb(230 232 238);
+  --md-sys-color-surface-container-highest: rgb(224 226 232);
+}
+
+.light {
+  --md-sys-color-primary: rgb(49 98 141);
+  --md-sys-color-surface-tint: rgb(49 98 141);
+  --md-sys-color-on-primary: rgb(255 255 255);
+  --md-sys-color-primary-container: rgb(207 229 255);
+  --md-sys-color-on-primary-container: rgb(0 29 51);
+  --md-sys-color-secondary: rgb(82 96 112);
+  --md-sys-color-on-secondary: rgb(255 255 255);
+  --md-sys-color-secondary-container: rgb(213 228 247);
+  --md-sys-color-on-secondary-container: rgb(14 29 42);
+  --md-sys-color-tertiary: rgb(105 87 121);
+  --md-sys-color-on-tertiary: rgb(255 255 255);
+  --md-sys-color-tertiary-container: rgb(239 219 255);
+  --md-sys-color-on-tertiary-container: rgb(35 21 51);
+  --md-sys-color-error: rgb(186 26 26);
+  --md-sys-color-on-error: rgb(255 255 255);
+  --md-sys-color-error-container: rgb(255 218 214);
+  --md-sys-color-on-error-container: rgb(65 0 2);
+  --md-sys-color-background: rgb(247 249 255);
+  --md-sys-color-on-background: rgb(24 28 32);
+  --md-sys-color-surface: rgb(247 249 255);
+  --md-sys-color-on-surface: rgb(24 28 32);
+  --md-sys-color-surface-variant: rgb(222 227 235);
+  --md-sys-color-on-surface-variant: rgb(66 71 78);
+  --md-sys-color-outline: rgb(114 119 127);
+  --md-sys-color-outline-variant: rgb(194 199 207);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(45 49 53);
+  --md-sys-color-inverse-on-surface: rgb(239 241 246);
+  --md-sys-color-inverse-primary: rgb(156 203 251);
+  --md-sys-color-primary-fixed: rgb(207 229 255);
+  --md-sys-color-on-primary-fixed: rgb(0 29 51);
+  --md-sys-color-primary-fixed-dim: rgb(156 203 251);
+  --md-sys-color-on-primary-fixed-variant: rgb(17 74 115);
+  --md-sys-color-secondary-fixed: rgb(213 228 247);
+  --md-sys-color-on-secondary-fixed: rgb(14 29 42);
+  --md-sys-color-secondary-fixed-dim: rgb(185 200 218);
+  --md-sys-color-on-secondary-fixed-variant: rgb(58 72 87);
+  --md-sys-color-tertiary-fixed: rgb(239 219 255);
+  --md-sys-color-on-tertiary-fixed: rgb(35 21 51);
+  --md-sys-color-tertiary-fixed-dim: rgb(212 190 230);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(80 64 96);
+  --md-sys-color-surface-dim: rgb(216 218 224);
+  --md-sys-color-surface-bright: rgb(247 249 255);
+  --md-sys-color-surface-container-lowest: rgb(255 255 255);
+  --md-sys-color-surface-container-low: rgb(242 243 249);
+  --md-sys-color-surface-container: rgb(236 238 244);
+  --md-sys-color-surface-container-high: rgb(230 232 238);
+  --md-sys-color-surface-container-highest: rgb(224 226 232);
+}
+
+.dark-high-contrast {
+  --md-sys-color-primary: rgb(250 250 255);
+  --md-sys-color-surface-tint: rgb(156 203 251);
+  --md-sys-color-on-primary: rgb(0 0 0);
+  --md-sys-color-primary-container: rgb(161 207 255);
+  --md-sys-color-on-primary-container: rgb(0 0 0);
+  --md-sys-color-secondary: rgb(250 250 255);
+  --md-sys-color-on-secondary: rgb(0 0 0);
+  --md-sys-color-secondary-container: rgb(190 204 223);
+  --md-sys-color-on-secondary-container: rgb(0 0 0);
+  --md-sys-color-tertiary: rgb(255 249 252);
+  --md-sys-color-on-tertiary: rgb(0 0 0);
+  --md-sys-color-tertiary-container: rgb(216 195 234);
+  --md-sys-color-on-tertiary-container: rgb(0 0 0);
+  --md-sys-color-error: rgb(255 249 249);
+  --md-sys-color-on-error: rgb(0 0 0);
+  --md-sys-color-error-container: rgb(255 186 177);
+  --md-sys-color-on-error-container: rgb(0 0 0);
+  --md-sys-color-background: rgb(16 20 24);
+  --md-sys-color-on-background: rgb(224 226 232);
+  --md-sys-color-surface: rgb(16 20 24);
+  --md-sys-color-on-surface: rgb(255 255 255);
+  --md-sys-color-surface-variant: rgb(66 71 78);
+  --md-sys-color-on-surface-variant: rgb(250 250 255);
+  --md-sys-color-outline: rgb(198 203 211);
+  --md-sys-color-outline-variant: rgb(198 203 211);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(224 226 232);
+  --md-sys-color-inverse-on-surface: rgb(0 0 0);
+  --md-sys-color-inverse-primary: rgb(0 44 74);
+  --md-sys-color-primary-fixed: rgb(215 233 255);
+  --md-sys-color-on-primary-fixed: rgb(0 0 0);
+  --md-sys-color-primary-fixed-dim: rgb(161 207 255);
+  --md-sys-color-on-primary-fixed-variant: rgb(0 24 43);
+  --md-sys-color-secondary-fixed: rgb(218 232 251);
+  --md-sys-color-on-secondary-fixed: rgb(0 0 0);
+  --md-sys-color-secondary-fixed-dim: rgb(190 204 223);
+  --md-sys-color-on-secondary-fixed-variant: rgb(9 23 37);
+  --md-sys-color-tertiary-fixed: rgb(242 224 255);
+  --md-sys-color-on-tertiary-fixed: rgb(0 0 0);
+  --md-sys-color-tertiary-fixed-dim: rgb(216 195 234);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(30 15 45);
+  --md-sys-color-surface-dim: rgb(16 20 24);
+  --md-sys-color-surface-bright: rgb(54 57 62);
+  --md-sys-color-surface-container-lowest: rgb(11 14 18);
+  --md-sys-color-surface-container-low: rgb(24 28 32);
+  --md-sys-color-surface-container: rgb(28 32 36);
+  --md-sys-color-surface-container-high: rgb(39 42 47);
+  --md-sys-color-surface-container-highest: rgb(50 53 58);
+}
+
+.dark-medium-contrast {
+  --md-sys-color-primary: rgb(161 207 255);
+  --md-sys-color-surface-tint: rgb(156 203 251);
+  --md-sys-color-on-primary: rgb(0 24 43);
+  --md-sys-color-primary-container: rgb(102 149 194);
+  --md-sys-color-on-primary-container: rgb(0 0 0);
+  --md-sys-color-secondary: rgb(190 204 223);
+  --md-sys-color-on-secondary: rgb(9 23 37);
+  --md-sys-color-secondary-container: rgb(132 146 163);
+  --md-sys-color-on-secondary-container: rgb(0 0 0);
+  --md-sys-color-tertiary: rgb(216 195 234);
+  --md-sys-color-on-tertiary: rgb(30 15 45);
+  --md-sys-color-tertiary-container: rgb(157 137 174);
+  --md-sys-color-on-tertiary-container: rgb(0 0 0);
+  --md-sys-color-error: rgb(255 186 177);
+  --md-sys-color-on-error: rgb(55 0 1);
+  --md-sys-color-error-container: rgb(255 84 73);
+  --md-sys-color-on-error-container: rgb(0 0 0);
+  --md-sys-color-background: rgb(16 20 24);
+  --md-sys-color-on-background: rgb(224 226 232);
+  --md-sys-color-surface: rgb(16 20 24);
+  --md-sys-color-on-surface: rgb(250 250 255);
+  --md-sys-color-surface-variant: rgb(66 71 78);
+  --md-sys-color-on-surface-variant: rgb(198 203 211);
+  --md-sys-color-outline: rgb(158 163 171);
+  --md-sys-color-outline-variant: rgb(127 131 139);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(224 226 232);
+  --md-sys-color-inverse-on-surface: rgb(39 42 47);
+  --md-sys-color-inverse-primary: rgb(19 75 117);
+  --md-sys-color-primary-fixed: rgb(207 229 255);
+  --md-sys-color-on-primary-fixed: rgb(0 18 35);
+  --md-sys-color-primary-fixed-dim: rgb(156 203 251);
+  --md-sys-color-on-primary-fixed-variant: rgb(0 57 93);
+  --md-sys-color-secondary-fixed: rgb(213 228 247);
+  --md-sys-color-on-secondary-fixed: rgb(4 18 31);
+  --md-sys-color-secondary-fixed-dim: rgb(185 200 218);
+  --md-sys-color-on-secondary-fixed-variant: rgb(42 55 70);
+  --md-sys-color-tertiary-fixed: rgb(239 219 255);
+  --md-sys-color-on-tertiary-fixed: rgb(24 10 40);
+  --md-sys-color-tertiary-fixed-dim: rgb(212 190 230);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(63 48 79);
+  --md-sys-color-surface-dim: rgb(16 20 24);
+  --md-sys-color-surface-bright: rgb(54 57 62);
+  --md-sys-color-surface-container-lowest: rgb(11 14 18);
+  --md-sys-color-surface-container-low: rgb(24 28 32);
+  --md-sys-color-surface-container: rgb(28 32 36);
+  --md-sys-color-surface-container-high: rgb(39 42 47);
+  --md-sys-color-surface-container-highest: rgb(50 53 58);
+}
+
+.dark {
+  --md-sys-color-primary: rgb(156 203 251);
+  --md-sys-color-surface-tint: rgb(156 203 251);
+  --md-sys-color-on-primary: rgb(0 51 84);
+  --md-sys-color-primary-container: rgb(17 74 115);
+  --md-sys-color-on-primary-container: rgb(207 229 255);
+  --md-sys-color-secondary: rgb(185 200 218);
+  --md-sys-color-on-secondary: rgb(36 50 64);
+  --md-sys-color-secondary-container: rgb(58 72 87);
+  --md-sys-color-on-secondary-container: rgb(213 228 247);
+  --md-sys-color-tertiary: rgb(212 190 230);
+  --md-sys-color-on-tertiary: rgb(57 42 73);
+  --md-sys-color-tertiary-container: rgb(80 64 96);
+  --md-sys-color-on-tertiary-container: rgb(239 219 255);
+  --md-sys-color-error: rgb(255 180 171);
+  --md-sys-color-on-error: rgb(105 0 5);
+  --md-sys-color-error-container: rgb(147 0 10);
+  --md-sys-color-on-error-container: rgb(255 218 214);
+  --md-sys-color-background: rgb(16 20 24);
+  --md-sys-color-on-background: rgb(224 226 232);
+  --md-sys-color-surface: rgb(16 20 24);
+  --md-sys-color-on-surface: rgb(224 226 232);
+  --md-sys-color-surface-variant: rgb(66 71 78);
+  --md-sys-color-on-surface-variant: rgb(194 199 207);
+  --md-sys-color-outline: rgb(140 145 153);
+  --md-sys-color-outline-variant: rgb(66 71 78);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(224 226 232);
+  --md-sys-color-inverse-on-surface: rgb(45 49 53);
+  --md-sys-color-inverse-primary: rgb(49 98 141);
+  --md-sys-color-primary-fixed: rgb(207 229 255);
+  --md-sys-color-on-primary-fixed: rgb(0 29 51);
+  --md-sys-color-primary-fixed-dim: rgb(156 203 251);
+  --md-sys-color-on-primary-fixed-variant: rgb(17 74 115);
+  --md-sys-color-secondary-fixed: rgb(213 228 247);
+  --md-sys-color-on-secondary-fixed: rgb(14 29 42);
+  --md-sys-color-secondary-fixed-dim: rgb(185 200 218);
+  --md-sys-color-on-secondary-fixed-variant: rgb(58 72 87);
+  --md-sys-color-tertiary-fixed: rgb(239 219 255);
+  --md-sys-color-on-tertiary-fixed: rgb(35 21 51);
+  --md-sys-color-tertiary-fixed-dim: rgb(212 190 230);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(80 64 96);
+  --md-sys-color-surface-dim: rgb(16 20 24);
+  --md-sys-color-surface-bright: rgb(54 57 62);
+  --md-sys-color-surface-container-lowest: rgb(11 14 18);
+  --md-sys-color-surface-container-low: rgb(24 28 32);
+  --md-sys-color-surface-container: rgb(28 32 36);
+  --md-sys-color-surface-container-high: rgb(39 42 47);
+  --md-sys-color-surface-container-highest: rgb(50 53 58);
+}
+
